tests/errors/typecheck/event-missing.fil
import "primitives/core.fil";

comp main<'G: 1>(
  in: ['G, 'G+1] 32,
) -> (
  out: ['G+4, 'G+5] 32,
) {
  double := new Add[32](in, in);
  square := new Mult[32](double.out, double.out);
  out = square.out;
}